# tax-matrix

./: .gitattributes  .gitignore  .venv  Cargo.toml  README.md  app.py  build.rs.md  codingRequirements.txt  flake.nix  justfile  newRequirements.txt  requirements.txt  taxMatrix.py
.VSCodeCounter/2022-08-21_20-21-50/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-08-21_20-28-32/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-08-21_21-37-25/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
.VSCodeCounter/2022-08-23_02-43-57/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: docs.yml  python-blacken.yml  release.yml
2021-2022 Tax Rates/: CORRECT - UNION CTY TAX Example.txt  USE THIS FOR - Union County Tax and Fire Rates.xlsx
Releases/: NOTE.md
Releases/.venv_builder/: pyvenv.cfg
Releases/v2.0.0/: tax matrix.exe - Shortcut.lnk
Releases/v2.0.1 - hot-fix_town-of-harrisburg/: tax matrix.exe - Shortcut.lnk
nix/modules/: devshell.nix  formatting.nix  rust.nix
old_tax_matrix/: setup.py
old_tax_matrix/src/: clear.py
src/: config.py  main.rs  subject.py  toml_importer.rs
src/county_data/: cabarrus.yml  iredell.yml
src/rates/: states.toml
tax_matrix/: .venv  __init__.py  main.py  setup.py
tax_matrix/src/: __init__.py  clear.py  config.py  subject.py
templates/: introduction.html
(+82 files in other folders)
