[package]
authors = ["Maxwell Rupp <gignsky@gignsky.com>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "tax-matrix"
description = "A simple Rust project using Nix"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
easy_paths = "0.1.1"
static-toml = "1.3.0"
# log = "0.4.27"
# serde = { version = "1.0.219", features = ["derive"] }
# toml = "0.8.20"
